# 4347-Project-Demo

./: .gitignore  CMakeLists.txt  Main.c  README  build.sh  code  dted_code_sample.qgz  main
scripts/: build.sh  install.sh
